syntax = "proto3";
package Pylonstech.pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

import "gogoproto/gogo.proto";

message PaymentInfo {
  string purchase_id = 1;
  string processor_name = 2;
  string payer_addr = 3;
  string amount = 4 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"];
  string product_id = 5;
  string signature = 6;
}

message PaymentProcessHistory {
  string execution_id = 1;
  repeated PaymentInfo payment_infors = 2 [(gogoproto.nullable) = false];;
}
