syntax = "proto3";
package pylons.pylons.v1;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types/v1";
message AppleInAppPurchaseOrder {
  string quantity = 1; 
  string productID = 2; 
  string purchaseID = 3; 
  string purchaseDate = 4; 
  string Creator = 5;
}
